# tinygettext

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FindICONV.cmake  README  README.md  SConstruct  TODO  flake.nix  tinygettext-config.cmake.in  tinygettext.nix
include/tinygettext/: dictionary.hpp  dictionary_manager.hpp  expression_parser.hpp  file_system.hpp  iconv.hpp  language.hpp  log.hpp  plural_forms.hpp  po_parser.hpp  unix_file_system.hpp  windows_file_system.hpp
mk/cmake/: TinyCMMC.cmake
src/: CMakeLists.txt  SConscript  SConstruct  dictionary.cpp  dictionary.hpp  dictionary_manager.cpp  dictionary_manager.hpp  directory.cpp  directory.hpp  expression_parser.cpp  findlocale.cpp  iconv.cpp  iconv.hpp  language.cpp  language.hpp  language_def.cpp  language_def.hpp  log.cpp  log.hpp  physfs_stream.cpp  plural_forms.cpp  plural_forms.hpp  po_file_reader.cpp  po_file_reader.hpp  po_parser.cpp  po_parser.hpp  tinygettext.cpp  tinygettext.hpp  unix_file_system.cpp  windows_file_system.cpp
test/: SConscript  SConstruct  helloworld.cpp  po_parser_test.cpp  test.cpp  test.sh  tinygettext.cpp  tinygettext_test.cpp
test/helloworld/: de.po
test/po/: de.po  de2.po  de_AT.po  fr.po
tinygettext/: dictionary.cpp  dictionary.hpp  dictionary_manager.cpp  dictionary_manager.hpp  directory.cpp  directory.hpp  iconv.cpp  iconv.hpp  language.cpp  language.hpp  log.cpp  log.hpp  plural_forms.cpp  plural_forms.hpp  po_parser.cpp  po_parser.hpp  tinygettext.hpp
